<resources>
  <string name="app_name">Nastodon</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>

  <!-- timeline_frame -->
  <string name="frame_tab_timeline">Timeline</string>
  <string name="frame_tab_notice">Notice</string>
  <string name="frame_tab_search">Search</string>

  <!-- toot_item -->
  <string name="toot_description_reblog">%sさんのブースト</string>
  <string name="account_avatar">account_avatar</string>
  <string name="button_reply">button_reply</string>
  <string name="button_repeat">button_repeat</string>
  <string name="icon_visibility">icon_visibility</string>
  <string name="button_star">button_star</string>
  <string name="button_more">button_more_action</string>
  <string name="toot_more_share">共有する</string>
  <string name="toot_more_on_browser">ブラウザで開く</string>
  <string name="toot_more_pin">ピン止めする</string>
  <string name="toot_more_un_pin">ピン止めを外す</string>
  <string name="toot_more_delete">トゥートを削除</string>

  <!-- send_toot -->
  <string name="inputContentWarningTextHint">警告文を入力</string>
  <string name="inputMainTextHint">本文を入力</string>

  <!-- notice -->
  <string name="noticeDescriptionFollow">%sさんからフォローされました</string>
  <string name="noticeDescriptionFavourite">%sさんからお気に入りに登録されました</string>
  <string name="noticeDescriptionReblog">%sさんからブーストされました</string>
  <string name="noticeDescriptionMention">%sさんからのリプライ</string>
  <string name="noticeDescriptionPoll">%sさんから投票されました</string>
  <string name="noticeDescriptionUndefined">%sさんから未定義の通知</string>

  <!-- account_page -->
  <string name="accountStatusesCountFormat">%d トゥート</string>
  <string name="accountFollowingCountFormat">フォロー %d</string>
  <string name="accountFollowersCountFormat">フォロワー %d</string>
  <string name="relationship_muting">ミュート中</string>
  <string name="relationship_blocking">ブロック中</string>

  <!-- image_description -->
  <string name="toot_un_fold_button_description">本文を開く</string>
</resources>
