<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.graphics.Color" />

    <import type="android.view.View" />

    <import type="com.nanoyatsu.nastodon.data.domain.Visibility" />

    <variable
      name="vm"
      type="com.nanoyatsu.nastodon.view.tootDetail.TootViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="2dp"
      android:padding="8dp">

      <ImageView
        android:layout_width="@dimen/avatar_bottom_end_size"
        android:layout_height="0dp"
        android:src="@drawable/ic_repeat_white"
        android:tint="@{Color.GRAY}"
        android:visibility="@{(vm.rebloggedBy == null) ? View.GONE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="@id/description"
        app:layout_constraintEnd_toEndOf="@id/icon_frame"
        app:layout_constraintTop_toTopOf="@id/description"
        tools:tint="@android:color/darker_gray" />

      <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        android:text="@{@string/toot_description_reblog(vm.rebloggedBy.displayName)}"
        android:visibility="@{(vm.rebloggedBy == null) ? View.GONE : View.VISIBLE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_frame"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="boosted by display_name" />

      <FrameLayout
        android:id="@+id/icon_frame"
        android:layout_width="@dimen/avatar_frame_size"
        android:layout_height="@dimen/avatar_frame_size"
        android:onClick="@{() -> vm.onAvatarClicked()}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <ImageView
          android:id="@+id/account_avatar"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="top|start"
          android:contentDescription="@string/account_avatar"
          app:circleImageUrl="@{vm.toot.account.avatar}"
          app:layout_height="@{(vm.rebloggedBy == null) ? (float)@dimen/avatar_frame_size : (float)@dimen/avatar_top_start_size}"
          app:layout_width="@{(vm.rebloggedBy == null) ? (float)@dimen/avatar_frame_size : (float)@dimen/avatar_top_start_size}"
          tools:srcCompat="@tools:sample/avatars" />

        <ImageView
          android:id="@+id/reblogged_avatar"
          android:layout_width="@dimen/avatar_bottom_end_size"
          android:layout_height="@dimen/avatar_bottom_end_size"
          android:layout_gravity="bottom|end"
          android:visibility="@{(vm.rebloggedBy == null) ? View.GONE : View.VISIBLE}"
          app:circleImageUrl="@{vm.rebloggedBy.avatar}"
          tools:src="@drawable/ic_repeat_white"
          tools:tint="@color/reblog_blue" />
      </FrameLayout>

      <ImageButton
        style="@style/NonPaddingButton"
        android:layout_width="54dp"
        android:layout_height="32dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/toot_un_fold_button_description"
        android:onClick="@{() -> vm.toggleFolding()}"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textSize="@dimen/text_mini"
        android:tint="#555555"
        android:visibility="@{vm.toot.spoilerText.empty ? View.GONE : View.VISIBLE}"
        app:layout_constraintEnd_toEndOf="@id/icon_frame"
        app:layout_constraintStart_toStartOf="@id/icon_frame"
        app:layout_constraintTop_toBottomOf="@id/icon_frame"
        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
      <!--   todo 閉じるとき上向き、開閉アニメーション   -->

      <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:text="@{vm.toot.account.displayName}"
        app:layout_constraintStart_toEndOf="@+id/icon_frame"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:text="displayName" />

      <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:text="@{'@'+vm.toot.account.username}"
        app:layout_constraintEnd_toStartOf="@id/created_at"
        app:layout_constraintStart_toEndOf="@+id/displayName"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:text="\@username" />

      <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="@{() -> vm.onTimeClicked()}"
        app:createdAt="@{vm.toot.createdAt}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:text="createdAt" />

      <TextView
        android:id="@+id/spoiler_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:autoLink="all"
        android:visibility="@{vm.toot.spoilerText.empty ? View.GONE : View.VISIBLE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_frame"
        app:layout_constraintTop_toBottomOf="@+id/displayName"
        app:tootText="@{vm.toot.spoilerText}"
        tools:text="spoilerText" />

      <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:autoLink="all"
        android:visibility="@{(vm.toot.spoilerText.empty || !vm.isFolding()) ? View.VISIBLE : View.GONE }"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_frame"
        app:layout_constraintTop_toBottomOf="@+id/spoiler_text"
        app:tootText="@{vm.toot.content}"
        tools:text="statusContent" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:visibility="@{vm.toot.mediaAttachments.empty ? View.GONE : View.VISIBLE }"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_frame"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:itemCount="4" />

      <ImageView
        android:id="@+id/button_reply"
        android:layout_width="@dimen/icon_button"
        android:layout_height="@dimen/icon_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/button_reply"
        android:onClick="@{() -> vm.onReplyClicked()}"
        android:src="@drawable/ic_reply_white"
        android:tint="@{Color.GRAY}"
        app:layout_constraintStart_toEndOf="@id/icon_frame"
        app:layout_constraintTop_toBottomOf="@id/attachments"
        tools:tint="@android:color/darker_gray" />

      <FrameLayout
        android:id="@+id/button_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/button_reply"
        app:layout_constraintTop_toBottomOf="@id/attachments">

        <ImageView
          android:layout_width="@dimen/icon_button"
          android:layout_height="@dimen/icon_button"
          android:contentDescription="@string/button_repeat"
          android:onClick="@{() -> vm.onReblogClicked()}"
          android:src="@{vm.reblogEvent == true ? @drawable/animation_refresh : @drawable/ic_repeat_white}"
          android:tint="@{vm.reblogged == true ? @color/reblog_blue : Color.GRAY}"
          android:visibility="@{vm.toot.visibility == Visibility.PRIVATE || vm.toot.visibility == Visibility.DIRECT ? View.GONE : View.VISIBLE}"
          tools:src="@drawable/ic_repeat_white"
          tools:tint="@color/reblog_blue" />

        <ImageView
          android:layout_width="@dimen/icon_button"
          android:layout_height="@dimen/icon_button"
          android:contentDescription="@string/icon_visibility"
          android:src="@{vm.toot.visibility == Visibility.PRIVATE ? @drawable/ic_lock_white : @drawable/ic_mail_white}"
          android:tint="@android:color/background_dark"
          android:visibility="@{vm.toot.visibility == Visibility.PRIVATE || vm.toot.visibility == Visibility.DIRECT ? View.VISIBLE : View.GONE }"
          tools:src="@drawable/ic_lock_white"
          tools:visibility="gone" />

      </FrameLayout>

      <ImageView
        android:id="@+id/button_star"
        android:layout_width="@dimen/icon_button"
        android:layout_height="@dimen/icon_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/button_star"
        android:onClick="@{() -> vm.onFavouriteClicked()}"
        android:src="@{vm.favouriteEvent == true ? @drawable/animation_refresh : @drawable/ic_star_white}"
        android:tint="@{vm.favourited == true ? @color/fav_yellow : Color.GRAY}"
        app:layout_constraintStart_toEndOf="@id/button_repeat"
        app:layout_constraintTop_toBottomOf="@id/attachments"
        tools:src="@drawable/ic_star_white"
        tools:tint="@color/fav_yellow" />

      <ImageView
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_more_horiz_white"
        android:backgroundTint="@{Color.GRAY}"
        android:contentDescription="@string/button_star"
        android:onClick="@{() -> vm.onFavouriteClicked()}"
        app:layout_constraintStart_toEndOf="@id/button_star"
        app:layout_constraintTop_toBottomOf="@id/attachments"
        tools:backgroundTint="@android:color/darker_gray" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@drawable/shape_divider"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
