<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <import type="android.graphics.Color" />

    <variable
      name="vm"
      type="com.nanoyatsu.nastodon.view.tootDetail.TootViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="2dp"
      android:padding="8dp">

      <ImageView
        android:id="@+id/accountAvatar"
        android:layout_width="@dimen/avatar_frame_size"
        android:layout_height="@dimen/avatar_frame_size"
        android:contentDescription="@string/account_avatar"
        android:onClick="@{() -> vm.onAvatarClicked()}"
        app:circleImageUrl="@{vm.toot.account.avatar}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

      <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@{vm.toot.account.displayName}"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accountAvatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="displayName" />

      <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:singleLine="true"
        android:text="@{'@'+vm.toot.account.username}"
        app:layout_constraintBottom_toTopOf="@id/spoiler_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accountAvatar"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:text="\@username" />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

      <TextView
        android:id="@+id/spoiler_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:textStyle="bold"
        android:visibility="@{vm.toot.spoilerText.empty ? View.GONE : View.VISIBLE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountAvatar"
        app:tootText="@{vm.toot.spoilerText}"
        tools:text="spoilerText" />

      <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spoiler_text"
        app:tootText="@{vm.toot.content}"
        tools:text="statusContent" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="@{vm.toot.mediaAttachments.empty ? View.GONE : View.VISIBLE }"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:itemCount="4" />

      <TextView
        android:id="@+id/created_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:createdAt="@{vm.toot.createdAt}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attachments"
        tools:text="createdAt" />

      <View
        android:id="@+id/divider_main_under"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/created_at" />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reply_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/repeat_area"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_main_under">

        <ImageView
          android:id="@+id/button_reply"
          android:layout_width="@dimen/icon_button"
          android:layout_height="@dimen/icon_button"
          android:contentDescription="@string/button_reply"
          android:onClick="@{() -> vm.onReplyClicked()}"
          android:src="@drawable/ic_reply_white"
          android:tint="@{Color.GRAY}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:tint="@android:color/darker_gray" />
        <!--  todo カウントを載せる  -->

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repeat_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/star_area"
        app:layout_constraintStart_toEndOf="@id/reply_area"
        app:layout_constraintTop_toBottomOf="@id/divider_main_under">

        <ImageView
          android:id="@+id/button_repeat"
          android:layout_width="@dimen/icon_button"
          android:layout_height="@dimen/icon_button"
          android:contentDescription="@string/button_repeat"
          android:onClick="@{() -> vm.onReblogClicked()}"
          android:src="@{vm.reblogEvent == true ? @drawable/animation_refresh : @drawable/ic_repeat_white}"
          android:tint="@{vm.reblogged == true ? @color/reblog_blue : Color.GRAY}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@drawable/ic_repeat_white"
          tools:tint="@color/reblog_blue" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/star_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/repeat_area"
        app:layout_constraintTop_toBottomOf="@id/divider_main_under">

        <ImageView
          android:id="@+id/button_star"
          android:layout_width="@dimen/icon_button"
          android:layout_height="@dimen/icon_button"
          android:contentDescription="@string/button_star"
          android:onClick="@{() -> vm.onFavouriteClicked()}"
          android:src="@{vm.favouriteEvent == true ? @drawable/animation_refresh : @drawable/ic_star_white}"
          android:tint="@{vm.favourited == true ? @color/fav_yellow : Color.GRAY}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@drawable/ic_star_white"
          tools:tint="@color/fav_yellow" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@drawable/shape_divider"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

